# sparqlSim

./: Makefile.am  README  README.md  configure.ac
m4/: ax_boost_iostreams.m4  ax_check_zlib.m4
queries/: dbpedia.benchmark.sparql  dbpedia.kognac.sparql  dbpedia.original.sparql  dbpedia.variable.sparql  ldbc.original.sparql  lubm.benchmark.sparql  lubm.kognac.12.sparql  lubm.kognac.sparql  lubm.kognac.variable.sparql  lubm.original.sparql  lubm.variable.sparql  lubm0.smalltest.sparql  wikidata_OPT0_20.sparql  wikidata_OPT10_20.sparql  wikidata_OPT1_20.sparql  wikidata_OPT2_20.sparql  wikidata_OPT3_20.sparql  wikidata_OPT4_20.sparql  wikidata_OPT5_20.sparql  wikidata_OPT6_20.sparql  wikidata_OPT8_20.sparql
resources/bm/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  bmenv.sh  canon-system  makefile.in  readme
resources/bm/lang-maps/: CMakeLists.txt  readme
resources/bm/lang-maps/jni/: CMakeLists.txt
resources/bm/lang-maps/test/: libbmtest.c
resources/bm/samples/: readme
resources/bm/samples/bvsample01/: Makefile  sample1.cpp
resources/bm/samples/bvsample02/: Makefile  sample2.cpp
resources/bm/src/: bm.h  bmalgo.h  bmalgo_impl.h  bmalgo_similarity.h  bmalloc.h  bmavx2.h  bmblocks.h  bmconst.h  bmdbg.h  bmdef.h  bmfunc.h  bmfwd.h  bmgamma.h  bmrandom.h  bmserial.h  bmsparsevec.h  bmsparsevec_algo.h  bmsparsevec_serial.h  bmsparsevec_util.h  bmsse2.h  bmsse4.h  bmsse_util.h  bmtimer.h  bmtrans.h  bmundef.h  bmutil.h  bmvmin.h  encoding.h
resources/bm/xcode/: cmake-gen.sh
src/: Makefile.am  algorithms.cc  algorithms.h  allds.cc  allds.h  centeredstrongsimulation.cc  centeredstrongsimulation.h  cmdline-lexer.ll  cmdline-parser.h  cmdline-parser.yy  cmdline.ggo  config.h  config.h.in  edge.cc  edge.h  graph-lexer.ll  graph-parser.yy  graph.cc  graph.h  graph.io.cc  graph.io.h  graph.query.cc  hhk.cc  hhk.h  label.cc  label.h  maetal.cc  maetal.h  main.cc  node.cc  node.h  reporter.cc  reporter.h  simulation.cc  simulation.h  simulations.h  smatrix.cc  smatrix.h  strongsimulation.cc  strongsimulation.h  (+4 more)
tests/: dbpedia.benchmark.sparql  dbpedia.original.sparql  dbpedia.variable.sparql  lubm.benchmark.sparql  lubm.original.sparql  lubm.variable.sparql
(+51 files in other folders)
